feat: added get user by id
